pkg/lang/testdata/ub/config/invalid/configurations-unknown-local.ub
locals: { aws-config: { region: 'us-east-1' } }

factory: {
  configurations: { aws.default: local.aws-cfg }
}
